src/index.css
/* ... */
/* MAIN ****************************************/

.dashboard-container {
  width: calc(100vw - 200px);
  padding: 30px;
  overflow: hidden;
}

.dashboard {
  border-radius: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  text-align: left;
  height: calc(100vh - 60px);
}

/* SEARCH BAR ***********************************/

.top-section {
  height: 100px;
  border-bottom: 1px solid var(--light-grey);
  display: flex;
  justify-content: space-between;
  position: relative;
}

.searchbar {
  background: transparent;
  border: none;
  padding-left: 100px;
  width: 100%;
  caret-color: var(--light-blue);
  color: var(--light-blue);
}

.searchbar:focus-visible,
.searchbar:focus {
  box-shadow: none;
}

.top-section::before {
  content: "";
  background: url(../public/icons/search-icon.svg) no-repeat center;
  background-size: cover;
  width: 18px;
  height: 18px;
  position: absolute;
  top: 50%;
  left: 60px;
  transform: translateY(-50%);
}

.add-user-btn {
  margin: 30px 60px 30px 10px;
}

/* USERS, DEVELOPERS, CLIENTS TABLE ****************************************/

.table-div {
  width: 100%;
  height: calc(100% - 100px);
  overflow: scroll;
  border-radius: 20px;
}

.table {
  table-layout: auto;
  width: 100%;
  border-collapse: collapse;
  border-style: hidden;
}

.table-cell {
  padding: clamp(0.9375rem, 0.28216019417475735rem + 1.820388349514563vw, 1.875rem);
  border: 1px solid var(--light-grey);
  white-space: normal;
}

.avatar-column {
  padding: 10px 30px 10px 30px;
  text-align: center;
}

.avatar-column img {
  display: block;
  margin: 0 auto;
  width: clamp(3.125rem, 1.9607843137254901rem + 4.901960784313726vw, 5rem);
}

.options-container {
  border: none;
  display: flex;
  gap: 23px;
}

.options-icon {
  display: block;
  width: var(--font-size-large);
  height: var(--font-size-large);
  background-size: contain;
  cursor: pointer;
}

.options-icon:hover {
  filter: invert(37%) sepia(100%) saturate(2345%) hue-rotate(208deg) brightness(95%) contrast(96%);
}

.edit-option {background-image: url(../public/icons/edit-icon.png);}
.view-option {background-image: url(../public/icons/view-icon.png);}
.delete-option {background-image: url(../public/icons/delete-icon.png);}
.time-option {background-image: url(../public/icons/time-icon.png);}
.view-dark-option {background-image: url(../public/icons/view-dark-icon.png);}
.invoice-option {background-image: url(../public/icons/invoice-icon.png);}

/* BLACK ALPHA *********************************************/

.black-alpha {
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.25);
  display: none;
}

.black-alpha.show {
  display: block;
}

/* DELETE MODAL */

.delete-modal {
  display: none;
  width: min(90%, 600px);
  min-height: 200px;
  background: var(--white);
  text-align: center;
  padding: 30px 30px 35px 30px;
}

.delete-modal.show {
  display: block;
}

.flex-2-1 {
  display: flex;
  justify-content: center;
  column-gap: 30px;
  row-gap: 15px;
  flex-wrap: wrap;
}

.deleted-user {
  font-size: var(--font-size-large);
  font-weight: 700;
  margin-block: 10px 20px;
}

/* ADD USER MODAL / EDIT USER MODAL */

.add-user-modal,
.edit-user-modal{
  width: clamp(22.5rem, 7.95918367346939rem + 61.22448979591836vw, 30rem);
  height: 100vh;
  border-radius: 20px 0px 0px 20px;
  background: var(--white);
  padding: 20px clamp(2.5rem, 0.07653061224489832rem + 10.20408163265306vw, 3.75rem);
  display: grid;
  place-items: center;
  position: fixed;
  top: 0;
  right: 0;
  overflow: auto;
  box-shadow: -2px 0px 4px 0px rgba(0, 0, 0, 0.25);
  transform: translateX(480px);
  transition: transform 300ms ease-in;
}

.add-user-modal.show,
.edit-user-modal.show {
  transform: translateX(0);
}

.add-user-modal form,
.edit-user-modal form {
  display: grid;
  gap: 20px;
  width: 100%;   
}

.modal-title {
  font-weight: 700;
  font-size: var(--font-size-large);
}

.add-user-image {
  display: block;
  margin-inline: auto; 
  border: 1px solid var(--light-grey);
  border-radius: 50%;
  width: 80px;
  height: 80px;
  display: grid;
  place-items: center;
  text-align: center;
  font-size: var(--font-size-small);
}

.edit-user-image {
  margin-inline: auto;
}

.modal-right-input {
  padding: 5px 20px;
  border: 1px solid var(--light-grey);
  border-radius: 4px;
  font-size: var(--font-size-small);
}

.modal-right-input::placeholder {
  font-size: var(--font-size-small);
}

.add-user-modal-btns,
.edit-user-modal-btns {
  margin-top: 50px;
  justify-self: end;
  display: flex;
  align-items: center;
  gap: 30px;
}

.edit-user-modal-btns .btn-primary {
  padding-inline: 33px;
}

/* INVOICE MODAL */

.invoice-user-modal {
  display: none;
  width: min(90%, 800px);
  background: var(--white);
  text-align: center;
  padding: 30px 20px;
  border-radius: 20px;
}

.invoice-user-modal.show {
  display: block;
}

.invoice-title {
  border-bottom: 2px solid var(--light-grey);
  position: relative;
}

.modal-subtitle {
  font-weight: 700;
  font-size: var(--font-size-normal);
  margin-bottom: 20px;
}

.invoice-container > p {
  margin: 20px 0 0 45px;
  text-align: left;
}

.close-btn {
  position: absolute;
  top: 0;
  right: 0;
  width: 15px;
  height: 15px;
  cursor: pointer;
}

.close-btn div {
  width: 20px;
  height: 2px;
  background-color: #000;
  border-radius: 1px;
}

.close-bar1 {
  transform: rotate(-45deg) translate(-6px, 3px);
}
.close-bar2 {
  transform: rotate(45deg) translate(2px, 5px);
}

/* TIME MODAL */

.time-modal {
  display: none;
  width: 800px;
  min-height: 400px;
  background: var(--white);
  border-radius: 20px;
  padding: 30px clamp(1.875rem, 0.7107843137254901rem + 4.901960784313726vw, 3.75rem);
  text-align: center;
}

.time-modal.show {
  display: block;
}

.time-modal-container {
  column-gap: 60px;
  row-gap: 40px;
}

.desc-time {
  justify-content: start;
}

.desc-time > *{
  display: block;
  text-align: left;
  margin-bottom: 10px;
  width: 100%;
}
/* ... */

